--- a/sap.m.tutorial.testing.01/webapp/test/unit/unitTests.qunit.html
+++ b/sap.m.tutorial.testing.01/webapp/test/unit/unitTests.qunit.html
@@ -5,7 +5,7 @@
 	<title>Unit tests for Bulletin Board</title>
 
 	<script id="sap-ui-bootstrap"
-			src="https://ui5.sap.com/resources/sap-ui-core.js"
+			src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
 			data-sap-ui-resourceroots='{
 				"sap.ui.demo.bulletinboard": "../../"
 			}'
@@ -13,20 +13,20 @@
 			data-sap-ui-async="true">
 	</script>
 
-	<link rel="stylesheet" type="text/css" href="../../../../../../../../../../resources/sap/ui/thirdparty/qunit-2.css">
+	<link rel="stylesheet" type="text/css" href="https://openui5.hana.ondemand.com/resources/sap/ui/thirdparty/qunit-2.css">
 
 
-	<script src="../../../../../../../../../../resources/sap/ui/thirdparty/qunit-2.js"></script>
-	<script src="../../../../../../../../../../resources/sap/ui/qunit/qunit-junit.js"></script>
-	<script src="../../../../../../../../../../resources/sap/ui/qunit/qunit-coverage.js"></script>
-	<script src="../../../../../../../../../../resources/sap/ui/thirdparty/sinon.js"></script>
-	<script src="../../../../../../../../../../resources/sap/ui/thirdparty/sinon-qunit.js"></script>
+	<script src="https://openui5.hana.ondemand.com/resources/sap/ui/thirdparty/qunit-2.js"></script>
+	<script src="https://openui5.hana.ondemand.com/resources/sap/ui/qunit/qunit-junit.js"></script>
+	<script src="https://openui5.hana.ondemand.com/resources/sap/ui/qunit/qunit-coverage.js"></script>
+	<script src="https://openui5.hana.ondemand.com/resources/sap/ui/thirdparty/sinon.js"></script>
+	<script src="https://openui5.hana.ondemand.com/resources/sap/ui/thirdparty/sinon-qunit.js"></script>
 
 	<script src="unitTests.qunit.js"></script>
 
 </head>
 <body>
-	<div id="qunit"/>
-	<div id="qunit-fixture"/>
+	<div id="qunit"></div>
+	<div id="qunit-fixture"></div>
 </body>
 </html>
